Hide manu bar when scrolls

--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
             background: #2D2D2D;
             color: #FFFFFF;
             padding: 1rem 0;
-            position: sticky;
+            position: fixed;
             top: 0;
+            width: 100%;
             z-index: 100;
+            transition: transform 0.3s ease;
+        }
+
+        header.hidden {
+            transform: translateY(-100%);
         }
 
         header .container {
@@ -119,6 +125,7 @@
             text-align: center;
             padding: 4rem 0;
             background: #FFFFFF;
+            margin-top: 60px; /* Offset for fixed header */
         }
 
         .hero h2 {
@@ -263,6 +270,10 @@
                 text-align: center;
             }
 
+            .hero {
+                margin-top: 100px; /* Adjust for stacked header on mobile */
+            }
+
             .hero h2 {
                 font-size: 2rem;
             }
@@ -291,7 +302,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <h1>American Motors KZ</h1>
             <nav>
@@ -384,5 +395,23 @@
             </ul>
         </div>
     </footer>
+
+    <script>
+        let lastScrollTop = 0;
+        const header = document.getElementById('header');
+
+        window.addEventListener('scroll', () => {
+            let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+
+            if (currentScroll > lastScrollTop) {
+                // Scrolling down
+                header.classList.add('hidden');
+            } else {
+                // Scrolling up
+                header.classList.remove('hidden');
+            }
+            lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+        });
+    </script>
 </body>
 </html>
